# QS-Tunnel

./: README.md  go.mod
cmd/bench/: main.go
cmd/client/: main.go
cmd/server/: main.go
internal/batchsend/: batchsend.go  timer.go
internal/config/: config.go
internal/congestion/: bbr.go
internal/dashboard/: dashboard.go
internal/dashboard/static/: index.html
internal/dnscache/: dnscache.go  pool.go
internal/iouring/: ring.go
internal/metrics/: metrics.go
internal/mtu/: mtu.go
internal/proto/: proto_test.go
internal/reasm/: reasm.go  reasm_test.go
internal/rustcore/: compare_test.go  rustcore.go  rustcore_test.go
internal/sendpool/: sendpool.go
internal/socks5/: socks5.go
internal/transport/: obfs_spoof.go  transport_test.go  udp.go
internal/xui/: xui.go
internal/zerocopy/: splice.go
rustcore/: Cargo.toml
rustcore/src/: crypto.rs  lib.rs  proto.rs  reasm.rs
tests/: integration_test.go  stress_test.go
